# freesurfer

./: CMakeLists.txt  configure.in
distribution/average/: Makefile.am
mri_warp_convert/: mri_warp_convert.cpp  mri_warp_convert.help.xml
rjb_m3z_stuff/: CMakeLists.txt  rjb_m3z_stuff.cpp  rjb_m3z_stuff.help.xml
scripts/: Makefile.am
scripts/InfantFS/: check_infant_recon_success.csh
